--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>K</span>
+        <span>I</span>
+        <span>.</span>
+        <span>.</span>
+        <span>.</span>
+        <span>R</span>
+        <span>E</span>
+        <span>V</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
